--- a/assets/styles/sass/2-layouts/_team.sass
+++ b/assets/styles/sass/2-layouts/_team.sass
@@ -74,7 +74,6 @@
         left: 0
         top: 80%
         height: 20%
-        box-shadow: 0 -5px 10px rgba( 0, 0, 0, .26)
 
     .team-details
       margin: 10px auto 55px
